# re-clipper

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAgg.cmake
examples/: CMakeLists.txt  agg_main.cpp  cairo_main.cpp  console_main.cpp  qt_main.cpp
